--- a/less/style.less
+++ b/less/style.less
@@ -33,7 +33,7 @@ body {
                     }
                     a:hover {
                         background-color: rgb(196, 162, 118);
-                        color: white;
+                        color: rgb(230, 222, 222);
                     }
                 }
             }
